[scroll-containers] changes for scrollable child containers

--- a/test/demo/main.scss
+++ b/test/demo/main.scss
@@ -60,6 +60,9 @@ body, button {
 }
 
 .demo {
+  overflow: auto;
+  padding-bottom: 6rem;
+
   &__footer {
     background-color: #fff;
     bottom: 0;
@@ -225,4 +228,12 @@ body, button {
   .about {
     background-color: #ff8145;
   }
+}
+
+.table-wrapper {
+  white-space: nowrap;
+  margin-top: 1rem;
+  width: 500px;
+  height: 150px;
+  overflow: auto;
 }
